--- a/딥러닝_선형회귀분석/(딥러닝) 선형회귀분석.md
+++ b/딥러닝_선형회귀분석/(딥러닝) 선형회귀분석.md
@@ -6,7 +6,7 @@
 
 ### 선형회귀란?
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%20%E1%84%89%E1%85%A5%E1%86%AB%E1%84%92%E1%85%A7%E1%86%BC%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%20d492a4941cd345b1934d951db701d6c4/Untitled.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%20%E1%84%89%E1%85%A5%E1%86%AB%E1%84%92%E1%85%A7%E1%86%BC%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%20d492a4941cd345b1934d951db701d6c4/Untitled.png)
+<img src="./(딥러닝) 선형회귀분석/Untitled.png" width="50%" height="50%" />
 
 x좌표는 샘플의 특성, y좌표는 라벨, 결과값을 뜻함
 
@@ -21,7 +21,8 @@ x좌표는 샘플의 특성, y좌표는 라벨, 결과값을 뜻함
 
 ### 경사하강법이란?
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%20%E1%84%89%E1%85%A5%E1%86%AB%E1%84%92%E1%85%A7%E1%86%BC%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%20d492a4941cd345b1934d951db701d6c4/Untitled%201.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%20%E1%84%89%E1%85%A5%E1%86%AB%E1%84%92%E1%85%A7%E1%86%BC%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%20d492a4941cd345b1934d951db701d6c4/Untitled%201.png)
+
+<img src="./(딥러닝) 선형회귀분석/Untitled 1.png" width="50%" height="50%" />
 
 선형회귀분석의 w(가중치)와 b(절편)을 찾는 기법 중 하나.
 
@@ -72,11 +73,13 @@ $MSE = \frac{1}{n}\sum\limits_{i=1}^n(y_i-ŷ_i)^2$
 
 $SE = (y-ŷ)^2$
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%20%E1%84%89%E1%85%A5%E1%86%AB%E1%84%92%E1%85%A7%E1%86%BC%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%20d492a4941cd345b1934d951db701d6c4/Untitled%202.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%20%E1%84%89%E1%85%A5%E1%86%AB%E1%84%92%E1%85%A7%E1%86%BC%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%20d492a4941cd345b1934d951db701d6c4/Untitled%202.png)
+
+<img src="./(딥러닝) 선형회귀분석/Untitled 2.png" width="50%" height="50%" />
 
 w와 b에 대한 손실함수를 그래프로 표현한 것
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%20%E1%84%89%E1%85%A5%E1%86%AB%E1%84%92%E1%85%A7%E1%86%BC%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%20d492a4941cd345b1934d951db701d6c4/Untitled%203.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%20%E1%84%89%E1%85%A5%E1%86%AB%E1%84%92%E1%85%A7%E1%86%BC%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%E1%84%87%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%A8%20d492a4941cd345b1934d951db701d6c4/Untitled%203.png)
+
+<img src="./(딥러닝) 선형회귀분석/Untitled 3.png" width="50%" height="50%" />
 
 w와 b의 기울기가 최소가 될 때
 
