--- a/딥러닝_로지스틱회귀/(딥러닝)로지스틱회귀.md
+++ b/딥러닝_로지스틱회귀/(딥러닝)로지스틱회귀.md
@@ -24,17 +24,18 @@
 
 log-odds를 구하기 위해서는 odds 값을 구해야 한다.
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled.png)
+
+<img src="./(딥러닝)로지스틱회귀/Untitled.png" width="50%" height="50%" />
 
 odds 값은 성공 확률을 성공하지 않을 확률로 나눈 것이다. odds 값에 log를 씌우면 log-odds가 된다.
 
 - **시그모이드 함수**
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%201.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%201.png)
+<img src="./(딥러닝)로지스틱회귀/Untitled 1.png" width="50%" height="50%" />
 
 - **로지스틱회귀의 진행 단계**
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%202.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%202.png)
+<img src="./(딥러닝)로지스틱회귀/Untitled 2.png" width="50%" height="50%" />
 
 범위가 -∞ ~ ∞인 z를 활성화 함수 중의 하나인 시그모이드 함수를 이용해 범위가 0 ~ 1인 a로 압축하고 임계 함수를 이용해 0 또는 1 값을 가지는 ŷ으로 이진 분류한다.
 
@@ -86,7 +87,7 @@ class LogisticNeuron:
 
 로지스틱 분류문제는 이진분류를 하기 때문에 손실을 두가지 경우로 나누어 생각해보아야 한다. 경사하강법(Gradient Descent)을 사용하여 모든 데이터에서 손실(Log Loss)이 최소화하는 가중치와 절편를 찾을 수 있다.
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%203.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%203.png)
+<img src="./(딥러닝)로지스틱회귀/Untitled 3.png" width="50%" height="50%" />
 
 분류(레이블)가 y=1, y=0 일 때 각각의 손실 함수의 그래프 (h=a)
 
@@ -98,20 +99,19 @@ $L = -(ylog(a) + (1-y)log(1-a))$
 
 분류의 정확도는 미분 가능한 함수가 아니기 때문에 이진 크로스 엔트로피 또는 로지스틱 손실 함수를 사용해 경사하강법에 적용하도록 해보자. 
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%204.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%204.png)
+<img src="./(딥러닝)로지스틱회귀/Untitled 4.png" width="50%" height="50%" />
 
 선형회귀의 손실함수를 미분한 것과 로지스틱 손실함수를 미분한 것이 흡사하다. 
 
 ### 단일층신경망
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%205.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%205.png)
+<img src="./(딥러닝)로지스틱회귀/Untitled 5.png" width="50%" height="50%" />
 
 신경망은 입력층 은닉층 출력층으로 나눌 수 있다. 은닉층이 하나 이상 존재하면 그 신경망을 딥러닝, 심층신경망이라 부른다.
 
 은닉층이 없이 입력층, 출력층만 존재할 경우 단일층 신경망이라 부른다. 단일층 신경망을 로지스틱회귀라 보아도 무방하다. 
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%206.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%206.png)
-
+<img src="./(딥러닝)로지스틱회귀/Untitled 6.png" width="50%" height="50%" />
 **입력층 구현**
 
 입력층은 입력 데이터 세트 준비하는 것으로 구현가능하다.
@@ -126,7 +126,7 @@ print(cancer.data.shape, cancer.target.shape)
     - 훈련 데이터 세트를 나눌 때는 테스트 세트보다 훈련 세트가 더 많아야 합니다.
     - 훈련 데이터 세트를 나누기 전에 양성, 음성 클래스가 훈련 세트나 테스트 세트의 어느 한쪽에 몰리지 않도록 골고루 섞어야 합니다. (훈련세트, 테스트세트 모두 같은 비율로 섞여 있도록 하는 것이 좋다)
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%207.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%207.png)
+<img src="./(딥러닝)로지스틱회귀/Untitled 7.png" width="50%" height="50%" />
 
 **Train set와 Test set 나누기**
 
@@ -135,7 +135,7 @@ from sklearn.model_selection import train_test_split
 x_train, x_test, y_train, y_test = train_test_split(x, y, stratify=y, test_size=0.2, random_state=42)
 ```
 
-![(%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%208.png]((%E1%84%83%E1%85%B5%E1%86%B8%E1%84%85%E1%85%A5%E1%84%82%E1%85%B5%E1%86%BC)%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%84%89%E1%85%B3%E1%84%90%E1%85%B5%E1%86%A8%E1%84%92%E1%85%AC%E1%84%80%E1%85%B1%2010cf8d5a8785450a9652b51a44a77766/Untitled%208.png)
+<img src="./(딥러닝)로지스틱회귀/Untitled 8.png" width="50%" height="50%" />
 
 - 확률적 경사 하강법 : 무작위성을 주기 위해 각 에포크마다 1개의 샘플을 무작위로 선택, 에포크마다 샘플을 무작위로 섞음  > 빠르게 최적의 가중치로 다가갈 수 있음, 계산양이 적음 >> 최적의 가중치를 찾아가는 궤적이 좋지는 않다.
 - 배치 경사 하강법 : 전체 샘플을 한 번에 적용하여 사용. 에포크마다 그레디언트를 한번에 계산하여 가중치를 업데이트 > 가장 좋은 최적의 가중치의 수렴을 보여준다. 가중치의 변하는 궤적이 부드럽게 옳바른 방향으로 흐름 >> 많은 양의 데이터를 적용시킬 때 사용하긴 적절치 않다.
