--- a/딥러닝_Dual_Layer/DualLayer.ipynb
+++ b/딥러닝_Dual_Layer/DualLayer.ipynb
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./MultiLayer.jpg\" width=\"100%\" height=\"100%\" />\n",
+    "<img src="./MultiLayer.jpg\" width=\"100%\" height=\"100%\" />\n",
     "- backprop\n",
     "각 단계별 손실 함수를 미분한다.\n",
     "z2에 대한 미분 값 = -(y - a1)\n",
@@ -315,8 +315,8 @@
     "z1에 대한 미분 값 = a1◉(1-a1)\n",
     "w1에 대한 미분 값 = x\n",
     "b1에 대한 미분 값 = 1\n",
-    "<img src=\"./Backprop.jpg\" width=\"100%\" height=\"100%\" />\n",
-    "<w2_grad>는 z2에 대한 미분 값과 w2에 대해 미분 값을 점곱하여 그래디언트를 계산했다. 여기서 a1과 err를 행렬 곱셈하기 위해 a1을 전치하였다. b2_grad는 z2에 대해 미분 값과 b2에 대해 미분한 값을 곱하여 그래디언트를 계산하였다. err_to_hidden는 은닉층의 손실함수를 미분하여 계산한 값으로 z2에 대해 미분한 값과 a1에 대한 미분 값, z1에 대한 미분 값을 곱하여 계산하였다. w1_grad는 z2, a1, z1, w1에 대한 미분 값을 곱한다. b1_grad는 z2, a1, z1, b1에 대한 미분 값을 곱한다. \n"
+    "<img src="./Backprop.jpg\" width=\"100%\" height=\"100%\" />\n",
+    "w2_grad는 z2에 대한 미분 값과 w2에 대해 미분 값을 점곱하여 그래디언트를 계산했다. 여기서 a1과 err를 행렬 곱셈하기 위해 a1을 전치하였다. b2_grad는 z2에 대해 미분 값과 b2에 대해 미분한 값을 곱하여 그래디언트를 계산하였다. err_to_hidden는 은닉층의 손실함수를 미분하여 계산한 값으로 z2에 대해 미분한 값과 a1에 대한 미분 값, z1에 대한 미분 값을 곱하여 계산하였다. w1_grad는 z2, a1, z1, w1에 대한 미분 값을 곱한다. b1_grad는 z2, a1, z1, b1에 대한 미분 값을 곱한다. \n"
    ]
   },
   {
